files completed for class, will be edited again later

--- a/contact.html
+++ b/contact.html
@@ -70,9 +70,9 @@
 						<div class="panel panel-default">
   							<div class="panel-heading text-center" id ="connectColor">Connect with me</div>
   							<div class="panel-body container">
-								<a href ="#"><img src ="assets/images/github_square_black.png"/></a>
-								<a href ="#"><img src ="assets/images/linkedin_square_color.png"/></a>
-								<a href ="#"><img src ="assets/images/Stack_Overflow.png"/></a>
+								<a href ="https://github.com/rmeaney" class ="contactImages"><img src ="assets/images/github_square_black.png"/></a>
+								<a href ="https://www.linkedin.com/in/richard-meaney-aa840720/" class ="contactImages"><img src ="assets/images/linkedin_square_color.png"/></a>
+								<a href ="https://stackoverflow.com/users/1485034/rmes" class ="contactImages"><img src ="assets/images/Stack_Overflow.png"/></a>
   							</div>
 						</div>
 					</div>
